@@ -54,6 +54,8 @@ dpkg (1.16.1) UNRELEASED; urgency=low
     directives.
   * dpkg-buildflags(1): make it clear that DEB_*_(SET|APPEND) environment
     variables are meant for users and should not be used by packages.
+  * update-alternatives: do not allow to reuse a slave link in another
+    slave alternative. Closes: #631547
 
   [ Guillem Jover ]
   * Install deb-src-control(5) man pages in dpkg-dev. Closes: #620520
